fix overlaps

--- a/static/style.css
+++ b/static/style.css
@@ -1,18 +1,19 @@
 
 
 body{
+    /* overflow-y: auto; */
     background-color: #000000;
     color: white;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
+    /* justify-content: center; */
     height: 100vh; /* Use viewport height to ensure full page height */
 }
 
-.chart-container {
+.chart-container
     position: relative;
     width: 50%;
     height: 50%;
@@ -20,10 +21,12 @@ body{
 }
 
 .centered-image-container {
+	z-index: 1;
 	text-align: center;
 }
 
 .centered-image-container img {
-	    max-width: 100%;
+	        z-index: 1;
+                max-width: 100%;
 	        max-height: 100vh;
 }
