--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -1,14 +1,32 @@
 
 
 body{
+    /* overflow-y: auto; */
     background-color: #000000;
     color: white;
+    margin: 0;
+    padding: 0;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
+    /* justify-content: center; */
+    height: 100vh; /* Use viewport height to ensure full page height */
 }
+
+.chart-container {;
+    position: relative;
+    width: 50%;
+    height: 50%;
+    margin-bottom: 20px; /* Optional: for some space between the charts */
+}
+
 .centered-image-container {
+	z-index: 1;
 	text-align: center;
 }
 
 .centered-image-container img {
-	    max-width: 100%;
+	        z-index: 1;
+                max-width: 100%;
 	        max-height: 100vh;
 }
